feat(html): create new blog page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,12 @@
                     <img class="nav-close" src="{{site.baseurl}}/images/hamburger-close.svg" alt="Close Navigation">
                 </label>
                 <ul class="nav">
-                    <li><a href="{{site.baseurl}}/all"><h6 class="{% if page.url contains 'all' %}current{% endif %}">All</h6></a></li>
+                    <li><a href="{{site.baseurl}}/"><h6 class="{% if page.url contains 'all' %}current{% endif %}">Home</h6></a></li>
                     <li><a href="{{site.baseurl}}/typography/"><h6 class="{% if page.url contains 'typography' %}current{% endif %}">Typography</h6></a></li>
                     <li><a href="{{site.baseurl}}/illustration/"><h6 class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</h6></a></li>
                     <li><a href="{{site.baseurl}}/interactive/"><h6 class="{% if page.url contains 'interactive' %}current{% endif %}">Interactive</h6></a></li>
                     <li><a href="{{site.baseurl}}/motion"><h6 class="{% if page.url contains 'motion' %}current{% endif %}">Motion</h6></a></li>
+                    <li><a href="{{site.baseurl}}/blog"><h6 class="{% if page.url contains 'blog' %}current{% endif %}">Blog</h6></a></li>
                     <li><a href="{{site.baseurl}}/contact"><h6 class="{% if page.url contains 'contact' %}current{% endif %}">Contact</h6></a></li>
                 </ul>
             </nav>
