feat(all): set up categories within blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
                     <li><a href="{{site.baseurl}}/illustration/"><h6 class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</h6></a></li>
                     <li><a href="{{site.baseurl}}/interactive/"><h6 class="{% if page.url contains 'interactive' %}current{% endif %}">Interactive</h6></a></li>
                     <li><a href="{{site.baseurl}}/motion"><h6 class="{% if page.url contains 'motion' %}current{% endif %}">Motion</h6></a></li>
-                    <li><a href="{{site.baseurl}}/blog"><h6 class="{% if page.url contains 'blog' %}current{% endif %}">Blog</h6></a></li>
+                    <li class="blog"><a href="{{site.baseurl}}/blog-web-development"><h6 class="{% if page.url contains 'blog' %}current{% endif %}">Blog</h6></a></li>
                     <li><a href="{{site.baseurl}}/contact"><h6 class="{% if page.url contains 'contact' %}current{% endif %}">Contact</h6></a></li>
                 </ul>
             </nav>
