style(all): set-up layout for blog posts

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <nav>
-    <ul class="nav">
+    <ul class="blog-nav">
         <li><a href="{{site.baseurl}}/blog-web-development/"><h6 class="{% if page.url contains 'web-development' %}current{% endif %}">Web Development</h6></a></li>
         <li><a href="{{site.baseurl}}/blog-mo-graphics/"><h6 class="{% if page.url contains 'graphics' %}current{% endif %}">Motion Graphics</h6></a></li>
     </ul>
