--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
                     <img class="nav-open" src="{{site.baseurl}}/images/hamburger-open.svg" alt="Open Navigation">
                     <img class="nav-close" src="{{site.baseurl}}/images/hamburger-close.svg" alt="Close Navigation">
                 </label>
-                <ul class="nav">
+                <ul class="nav main-nav">
                     <li><a href="{{site.baseurl}}/"><h6 class="{% if page.url contains 'all' %}current{% endif %}">Home</h6></a></li>
                     <li><a href="{{site.baseurl}}/typography/"><h6 class="{% if page.url contains 'typography' %}current{% endif %}">Typography</h6></a></li>
                     <li><a href="{{site.baseurl}}/illustration/"><h6 class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</h6></a></li>
