--- a/css/main.css
+++ b/css/main.css
@@ -102,24 +102,32 @@ li > a h6 {
     padding: 0;
 }
 
-.blog {
-    display: block;
-}
-
 nav {
     z-index: 5;
 }
 
 .nav {
+    display: none;
     margin-left: auto;
     margin right: auto;
-    display: none;
     position: absolute;
     right: 0;
     top: 100%;
     width: 100%;
     background-color: #003436;
     z-index: 5;
+}
+
+.blog-nav {
+    display:-webkit-flex;
+    display: flex;
+    flex-direction: row;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    align-self:center;
+    margin: 0 auto;
+    max-width: 25em;
+    width: 100%;
 }
 
 .nav a {
@@ -560,9 +568,14 @@ footer > div {
         align-self:center;
         position: relative;
         background-color: transparent;
-        top: 0;
-        
+        top: 0; 
 	}
+    
+    .blog-nav {
+        display:-webkit-flex;
+        display: flex;
+    }
+    
 	.nav a {
 		border-bottom-color: transparent;
         color: #025E63;
