style(css): center page on desktop view

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,8 @@ html, body {
 
 .main-wrapper {
     min-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: -190px;
 }
 
