style(all): made all portfolio piece's banners a solid light grey colour

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+<section class="blog-banner">
+    <figure class="banner push-top-half">
+        <figcaption id="tab"><h2>Blog</h2></figcaption>
+    </figure>
+</section>
+
 <nav>
     <ul class="blog-nav">
         <li><a href="{{site.baseurl}}/blog-web-development/"><h6 class="{% if page.url contains 'web-development' %}current{% endif %}">Web Development</h6></a></li>
