--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,38 +31,40 @@
     <!--
         HEADER
     -->
-    <div class="main-wrapper">
-        <header class="main-header">
-            <h1 class="main-logo">
-                <a href="{{site.baseurl}}/">
-                    <img class="logo-img" src="{{site.baseurl}}/images/logo.svg" alt="Sebastian Nadeau">
-                </a>
-            </h1>
-            <nav>
-                <input type="checkbox" class="nav-check" id="nav-check">
-                <label class="nav-label" for="nav-check">
-                    <img class="nav-open" src="{{site.baseurl}}/images/hamburger-open.svg" alt="Open Navigation">
-                    <img class="nav-close" src="{{site.baseurl}}/images/hamburger-close.svg" alt="Close Navigation">
-                </label>
-                <ul class="nav main-nav">
-                    <li><a href="{{site.baseurl}}/"><h6 class="{% if page.url contains 'all' %}current{% endif %}">Home</h6></a></li>
-                    <li><a href="{{site.baseurl}}/typography/"><h6 class="{% if page.url contains 'typography' %}current{% endif %}">Typography</h6></a></li>
-                    <li><a href="{{site.baseurl}}/illustration/"><h6 class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</h6></a></li>
-                    <li><a href="{{site.baseurl}}/interactive/"><h6 class="{% if page.url contains 'interactive' %}current{% endif %}">Interactive</h6></a></li>
-                    <li><a href="{{site.baseurl}}/motion"><h6 class="{% if page.url contains 'motion' %}current{% endif %}">Motion</h6></a></li>
-                    <li class="blog"><a href="{{site.baseurl}}/blog-web-development"><h6 class="{% if page.url contains 'blog' %}current{% endif %}">Blog</h6></a></li>
-                    <li><a href="{{site.baseurl}}/contact"><h6 class="{% if page.url contains 'contact' %}current{% endif %}">Contact</h6></a></li>
-                </ul>
-            </nav>
-        </header>
+        <section class="main-header-container">
+            <header class="main-header">
+                <h1 class="main-logo">
+                    <a href="{{site.baseurl}}/">
+                        <img class="logo-img" src="{{site.baseurl}}/images/logo.svg" alt="Sebastian Nadeau">
+                    </a>
+                </h1>
+                <nav>
+                    <input type="checkbox" class="nav-check" id="nav-check">
+                    <label class="nav-label" for="nav-check">
+                        <img class="nav-open" src="{{site.baseurl}}/images/hamburger-open.svg" alt="Open Navigation">
+                        <img class="nav-close" src="{{site.baseurl}}/images/hamburger-close.svg" alt="Close Navigation">
+                    </label>
+                    <ul class="nav main-nav">
+                        <li><a href="{{site.baseurl}}/"><h6 class="{% if page.url contains 'all' %}current{% endif %}">Home</h6></a></li>
+                        <li><a href="{{site.baseurl}}/typography/"><h6 class="{% if page.url contains 'typography' %}current{% endif %}">Typography</h6></a></li>
+                        <li><a href="{{site.baseurl}}/illustration/"><h6 class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</h6></a></li>
+                        <li><a href="{{site.baseurl}}/interactive/"><h6 class="{% if page.url contains 'interactive' %}current{% endif %}">Interactive</h6></a></li>
+                        <li><a href="{{site.baseurl}}/motion"><h6 class="{% if page.url contains 'motion' %}current{% endif %}">Motion</h6></a></li>
+                        <li class="blog"><a href="{{site.baseurl}}/blog-web-development"><h6 class="{% if page.url contains 'blog' %}current{% endif %}">Blog</h6></a></li>
+                        <li><a href="{{site.baseurl}}/contact"><h6 class="{% if page.url contains 'contact' %}current{% endif %}">Contact</h6></a></li>
+                    </ul>
+                </nav>
+            </header>
+        </section>
         
+        <div class="main-wrapper">
         {{content}}
+        </div>
         
     <!--
         FOOTER
     -->
-        
-    </div>  
+         
     <footer>
         <div class="pad-top-half">
             <a href="https://www.behance.net/SebastianNadeau" target="_blank">
