feat(all): add cirque du soleil project to portfolio

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -9,6 +9,16 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+        <a href="{{site.baseurl}}../typography/cirque-du-soleil/">
+            <img src="{{site.baseurl}}/images/typography/cirque-du-soleil-cover.jpg" alt="Cirque du Soleil">
+            <figcaption>
+                <h5>Cirque du Soleil</h5>
+            </figcaption>
+        </a>
+    </figure>
+    
+    <!--
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../typography/go-with-the-flow/">
             <img src="{{site.baseurl}}/images/typography/go-with-the-flow-cover.jpg" alt="Go with the Flow">
             <figcaption>
@@ -16,6 +26,7 @@
             </figcaption>
         </a>
     </figure>
+    -->
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../typography/collage/">
