--- a/css/main.css
+++ b/css/main.css
@@ -457,6 +457,10 @@ section figure:hover figcaption {
     background-color: #d9e4ea;
 }
 
+.cirque {
+    background-color: #d9e4ea;
+}
+
 .go-with-the-flow {
     background-color: #d9e4ea;
 }
