--- a/css/main.css
+++ b/css/main.css
@@ -240,6 +240,68 @@ a + p {
     margin-bottom: 4.5em;
 }
 
+.about-me {
+    margin: 1.5em auto 3em auto;
+    max-width: 90%;
+}
+
+.profile-pic {
+    width: 20em;
+    border-radius: 50%;
+    margin: 3em auto 1.5em auto;
+}
+
+#name {
+    margin: 1.3em auto 0.355rem auto;
+    padding-top: 4em;
+    text-align: center;
+    color: #FFF;
+    font-weight: normal;
+}
+
+#name + h5 {
+    margin: 0.355rem;
+}
+
+.photo-container {
+	text-align: center;
+}
+
+.photo {
+	position: relative;
+	line-height: 0;
+	overflow: hidden;
+}
+
+.photo-container img {
+ 	max-width: 100%;
+}
+
+.photo-overlay {
+    max-width: 100%;
+	color: #fff;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0; 
+	left: 0;
+	padding-left: 20px;
+	padding-right: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background: rgba(82,186,179, .65);
+}
+
+.photo-overlay {
+	opacity: 0;
+	transition: opacity .5s;
+}
+.photo-overlay:hover {
+	opacity: 1;
+}
+
 #columns > p {
     margin-top: 0;
     margin-bottom: 0;
@@ -251,7 +313,7 @@ h1 #columns p:last-child {
 }
 
 .about-section {
-    margin: 1.5rem auto 4em auto;
+    margin: 0 auto 4em auto;
     max-width: 95%;
 }
 
@@ -260,24 +322,9 @@ h1 #columns p:last-child {
     margin-left: 5%;
 }
 
-#name {
-    margin: 1.3em auto 0.355rem auto;
-    text-align: center;
-}
-
-#name + h5 {
-    margin: 0.355rem;
-}
-
 h3 + h5 {
     text-align: center;
     font-weight: normal;
-}
-
-.profile-pic {
-    width: 12em;
-    border-radius: 50%;
-    margin: 3em auto 1.5em auto;
 }
 
 .contact {
