--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ html, body {
 }
 
 body {
-    padding-top: 170px;
+    padding-top: 145px;
 }
 
 .main-wrapper {
@@ -98,7 +98,7 @@ a {
     background: #fff;
     box-shadow: 0 1px 4px rgba(0,0,0,.4);
     width: 100%;
-    height: 180px;
+    height: 145px;
     top: 0;
     z-index: 1000;
 }
@@ -107,14 +107,14 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
-    padding-bottom: 0.75em;
 }
 
 .main-logo {
     display: block;
     align-self: center;
-    margin: 1.5rem auto;
-    width: 280px;
+    margin: 1em auto;
+    padding-right: 1em;
+    width: 8em;
 }
 
 .logo-img {
@@ -141,7 +141,7 @@ nav {
     margin right: auto;
     position: absolute;
     right: 0;
-    top: 100%;
+    top: 145px;
     width: 100%;
     background-color: #003436;
     z-index: 5;
@@ -190,7 +190,7 @@ nav {
     width: 50px;
     position: absolute;
     right: 0.75rem;
-    bottom: 0em;
+    top: 3em;
 }
 
 .nav-open,
@@ -465,7 +465,6 @@ section figure:hover figcaption {
     background-position: center;
     background-size: cover;
     background-repeat:no-repeat;
-    margin-top: 0.75rem;
 }
 
 /* --------------------------
