--- a/css/main.css
+++ b/css/main.css
@@ -658,7 +658,11 @@ footer > div {
 @media (min-width: 769px) {
     
     body {
-        padding-top: 215px;   
+        padding-top: 175px;   
+    }
+    
+    .main-logo {
+        margin: 0.25em auto;   
     }
     
     .banner-carousel {
@@ -666,7 +670,7 @@ footer > div {
     }
     
     .main-header-container {
-        height: 230px;   
+        height: 175px;   
     }
     
     .push-top-double > h1 {
@@ -828,11 +832,15 @@ footer > div {
 @media (min-width: 1545px) {
     
     body {
-        padding-top: 135px;   
+        padding-top: 115px;   
     }
     
     .main-header-container {
-        height: 150px;   
+        height: 115px;   
+    }
+    
+    .main-logo {
+        margin: 0rem auto 0.75rem 0;
     }
     
     .push-top-double h1 {
@@ -862,12 +870,6 @@ footer > div {
     }
     .nav li {
         padding: 0 .75em;
-    }
-    
-    .main-logo {
-        display:-webkit-flex;
-        display: flex;
-        margin: 0.75rem auto 0.75rem 0;
     }
     
     .main-wrapper {
