style(all): style banners

--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ figure {
 }
 
 .preview-wrapper > figure {
-    border: #025E63 solid 1px;
+    border: #52bab3 solid 1px;
 }
 
 #project-wrapper .unit img {
@@ -441,7 +441,6 @@ section figure {
     position: relative;
     margin: 0em;
     padding: 0em;
-    border: none;
 }
 
 section figcaption {
@@ -470,7 +469,6 @@ img + figcaption {
 	justify-content: center;
 	align-items: center;
 	background: rgba(82,186,179, .85);
-    border: none;
 }
 
 img + figcaption {
@@ -503,7 +501,7 @@ section figure:hover figcaption {
 
 .banner {
     width: 100%;
-    height: 300px;
+    height: 20em;
     background-position: center;
     background-size: cover;
     background-repeat:no-repeat;
