--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="blog-banner">
-    <figure class="banner push-top-half">
+    <figure class="banner">
         <figcaption id="tab"><h2>Blog</h2></figcaption>
     </figure>
 </section>
