--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
     <link rel="stylesheet" href="{{site.baseurl}}/js/carousel/slick.css"/>
     <link rel="stylesheet" href="{{site.baseurl}}/js/carousel/slick-theme.css"/>
     <link rel="stylesheet" href="{{site.baseurl}}/js/lightbox/magnific-popup.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/css/typography.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/grids.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/typography.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/contact-form.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 </head>
     
