refactor(all): change media queries to new breakpoints

--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -1,5 +1,5 @@
 <div class="grid preview-wrapper">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../illustration/tennis-serve/">
             <img src="{{site.baseurl}}/images/illustration/the-tennis-serve-cover.jpg" alt="The tennis serve">
             <figcaption>
@@ -8,7 +8,7 @@
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../illustration/ottawa-senators-campaign/">
             <img src="{{site.baseurl}}/images/illustration/senator-campaign-cover.jpg" alt="Senator Campaign">
             <figcaption>
@@ -17,7 +17,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../illustration/company-poster/">
             <img src="{{site.baseurl}}/images/illustration/company-poster-cover.jpg" alt="Company Poster">
             <figcaption>
@@ -26,7 +26,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../illustration/blues-brothers/">
             <img src="{{site.baseurl}}/images/illustration/blues-brothers-cover.jpg" alt="Blues Brothers">
             <figcaption>
