--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -1,5 +1,5 @@
 <div class="grid preview-wrapper">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../motion/demo-reel/">
             <img src="{{site.baseurl}}/images/motion/demo-reel-cover.jpg" alt="Demo Reel">
             <figcaption>
@@ -8,7 +8,7 @@
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../motion/blue-hen-farm/">
             <img src="{{site.baseurl}}/images/motion/blue-hen-farm-cover.jpg" alt="Blue Hen Farm">
             <figcaption>
@@ -17,7 +17,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../motion/building-a-portfolio/">
             <img src="{{site.baseurl}}/images/motion/building-a-portfolio-cover.jpg" alt="Building a Portfolio">
             <figcaption>
@@ -26,7 +26,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../motion/tennis-infographic/">
             <img src="{{site.baseurl}}/images/motion/tennis-infographic-cover.jpg" alt="Tennis Infographic">
             <figcaption>
