--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -1,5 +1,5 @@
 <div class="grid preview-wrapper">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../interactive/ascent-app/">
             <img src="{{site.baseurl}}/images/interactive/ascent-app-cover.jpg" alt="Ascent App">
             <figcaption>
@@ -8,7 +8,7 @@
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../interactive/good-to-talk-app/">
             <img src="{{site.baseurl}}/images/interactive/good-to-talk-cover.jpg" alt="Good to Talk">
             <figcaption>
@@ -17,7 +17,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../interactive/palisar/">
             <img src="{{site.baseurl}}/images/interactive/palisar-cover.jpg" alt="Palisar">
             <figcaption>
@@ -26,7 +26,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../interactive/galactic-adventures/">
             <img src="{{site.baseurl}}/images/interactive/galactic-adventures-cover.jpg" alt="Galactic Adventures">
             <figcaption>
