--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,5 +1,5 @@
 <div class="grid preview-wrapper">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../typography/bridgehead/">
             <img src="{{site.baseurl}}/images/typography/bridgehead-cover.jpg" alt="Bridgehead">
             <figcaption>
@@ -8,7 +8,7 @@
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../typography/cirque-du-soleil/">
             <img src="{{site.baseurl}}/images/typography/cirque-du-soleil-cover.jpg" alt="Cirque du Soleil">
             <figcaption>
@@ -18,7 +18,7 @@
     </figure>
     
     <!--
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../typography/go-with-the-flow/">
             <img src="{{site.baseurl}}/images/typography/go-with-the-flow-cover.jpg" alt="Go with the Flow">
             <figcaption>
@@ -28,7 +28,7 @@
     </figure>
     -->
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../typography/collage/">
             <img src="{{site.baseurl}}/images/typography/collage-cover.jpg" alt="Typographic Collage">
             <figcaption>
@@ -37,7 +37,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../typography/obsessed-with-speed/">
             <img src="{{site.baseurl}}/images/typography/obsessed-with-speed-cover.jpg" alt="Obsessed with Speed">
             <figcaption>
