style(all): improved appearance of website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
     -->
          
     <footer>
-        <div class="pad-top-half">
+        <div>
             <a href="https://www.behance.net/SebastianNadeau" target="_blank">
                 <img class="social-media-icons" src="{{site.baseurl}}/images/behance-icon.svg" alt="Behance">
             </a>
@@ -79,7 +79,7 @@
                 <img class="social-media-icons" src="{{site.baseurl}}/images/vimeo-icon.svg" alt="Vimeo">
             </a>
         </div>
-        <div class="pad-bottom-half">
+        <div>
             <p class="copyright">© 2016 Sebastian Nadeau</p>
         </div>
     </footer>
