--- a/css/grids.css
+++ b/css/grids.css
@@ -1,1211 +1,127 @@
-/*
-  Gridifier || Code released under the UNLICENSE
-  http://gridifier.web-dev.tools/#xxs,4,0,1,1;xs,4,20,1,1;s,4,30.063,1,1;m,4,40.063,1,1;l,4,60.063,1,1;xl,6,64.063,1,1;xxl,6,80.063,1,1
-*/
-
 .grid {
-  margin: 0;
-  padding: 0;
-  letter-spacing: -0.31em;
-  text-rendering: optimizespeed;
-  display: -webkit-flex;
-  -webkit-flex-flow: row wrap;
-  display: -ms-flexbox;
-  -ms-flex-flow: row wrap;
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.grid-bottom {
-  -webkit-align-items: flex-end;
-  -ms-align-items: flex-end;
-  align-items: flex-end;
-}
-
-.grid-middle {
-  -webkit-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-}
-
-.grid-stretch {
-  -webkit-align-items: stretch;
-  -ms-align-items: stretch;
-  align-items: stretch;
-}
-
-.opera-only :-o-prefocus,
-.grid {
-  word-spacing: -0.43em;
+    overflow: hidden; 
 }
 
 .unit {
-  letter-spacing: normal;
-  text-rendering: auto;
-  vertical-align: top;
-  word-spacing: normal;
-  display: inline-block;
-  visibility: visible;
+    float: left;
 }
 
-.grid-bottom .unit {
-  vertical-align: bottom;
-}
-
-.grid-middle .unit {
-  vertical-align: middle;
-}
-
-[class*="unit-push-"],
-[class*="unit-pull-"] {
-  position: relative;
-}
-
-.unit-xxs-hidden {
-  display: none;
-  visibility: hidden;
-}
-
-.unit-xxs-centered {
-  margin: 0 auto;
-}
-
-.unit-xxs-1,
-.xxs-1 {
-  display: block;
-  visibility: visible;
-  width: 100%;
-}
-
-.unit-offset-xxs-0 {
-  margin-left: 0;
-}
-
-.unit-push-xxs-0,
-.unit-pull-xxs-0 {
-  left: 0;
-}
-
-.unit-xxs-1-2,
-.xxs-1-2 {
-  width: 50.0000%;
-}
-
-.unit-offset-xxs-1-2 {
-  margin-left: 50.0000%;
-}
-
-.unit-push-xxs-1-2 {
-  left: 50.0000%;
-}
-
-.unit-pull-xxs-1-2 {
-  left: -50.0000%;
-}
-
-.unit-xxs-1-3,
-.xxs-1-3 {
-  width: 33.3333%;
-}
-
-.unit-offset-xxs-1-3 {
-  margin-left: 33.3333%;
-}
-
-.unit-push-xxs-1-3 {
-  left: 33.3333%;
-}
-
-.unit-pull-xxs-1-3 {
-  left: -33.3333%;
-}
-
-.unit-xxs-2-3,
-.xxs-2-3 {
-  width: 66.6667%;
-}
-
-.unit-offset-xxs-2-3 {
-  margin-left: 66.6667%;
-}
-
-.unit-push-xxs-2-3 {
-  left: 66.6667%;
-}
-
-.unit-pull-xxs-2-3 {
-  left: -66.6667%;
-}
-
-.unit-xxs-1-4,
-.xxs-1-4 {
-  width: 25.0000%;
-}
-
-.unit-offset-xxs-1-4 {
-  margin-left: 25.0000%;
-}
-
-.unit-push-xxs-1-4 {
-  left: 25.0000%;
-}
-
-.unit-pull-xxs-1-4 {
-  left: -25.0000%;
-}
-
-.unit-xxs-3-4,
-.xxs-3-4 {
-  width: 75.0000%;
-}
-
-.unit-offset-xxs-3-4 {
-  margin-left: 75.0000%;
-}
-
-.unit-push-xxs-3-4 {
-  left: 75.0000%;
-}
-
-.unit-pull-xxs-3-4 {
-  left: -75.0000%;
-}
-
-.unit-xxs-1-2,
-.xxs-1-2,
-.unit-xxs-1-3,
-.xxs-1-3,
-.unit-xxs-2-3,
-.xxs-2-3,
-.unit-xxs-1-4,
-.xxs-1-4,
-.unit-xxs-3-4,
-.xxs-3-4 {
-  display: inline-block;
-  visibility: visible;
-}
-
-@media only screen and (min-width: 20em) {
-
-  .unit-xs-hidden {
-    display: none;
+.unit-s-hidden {
     visibility: hidden;
-  }
-
-  .unit-xs-centered {
-    margin: 0 auto;
-  }
-
-  .unit-xs-1,
-  .xs-1 {
-    display: block;
-    visibility: visible;
+    display: none;
+}
+.unit-s-1 {
     width: 100%;
-  }
-
-  .unit-offset-xs-0 {
-    margin-left: 0;
-  }
-
-  .unit-push-xs-0,
-  .unit-pull-xs-0 {
-    left: 0;
-  }
-
-  .unit-xs-1-2,
-  .xs-1-2 {
-    width: 50.0000%;
-  }
-
-  .unit-offset-xs-1-2 {
-    margin-left: 50.0000%;
-  }
-
-  .unit-push-xs-1-2 {
-    left: 50.0000%;
-  }
-
-  .unit-pull-xs-1-2 {
-    left: -50.0000%;
-  }
-
-  .unit-xs-1-3,
-  .xs-1-3 {
-    width: 33.3333%;
-  }
-
-  .unit-offset-xs-1-3 {
-    margin-left: 33.3333%;
-  }
-
-  .unit-push-xs-1-3 {
-    left: 33.3333%;
-  }
-
-  .unit-pull-xs-1-3 {
-    left: -33.3333%;
-  }
-
-  .unit-xs-2-3,
-  .xs-2-3 {
-    width: 66.6667%;
-  }
-
-  .unit-offset-xs-2-3 {
-    margin-left: 66.6667%;
-  }
-
-  .unit-push-xs-2-3 {
-    left: 66.6667%;
-  }
-
-  .unit-pull-xs-2-3 {
-    left: -66.6667%;
-  }
-
-  .unit-xs-1-4,
-  .xs-1-4 {
-    width: 25.0000%;
-  }
-
-  .unit-offset-xs-1-4 {
-    margin-left: 25.0000%;
-  }
-
-  .unit-push-xs-1-4 {
-    left: 25.0000%;
-  }
-
-  .unit-pull-xs-1-4 {
-    left: -25.0000%;
-  }
-
-  .unit-xs-3-4,
-  .xs-3-4 {
-    width: 75.0000%;
-  }
-
-  .unit-offset-xs-3-4 {
-    margin-left: 75.0000%;
-  }
-
-  .unit-push-xs-3-4 {
-    left: 75.0000%;
-  }
-
-  .unit-pull-xs-3-4 {
-    left: -75.0000%;
-  }
-
-  .unit-xs-1-2,
-  .xs-1-2,
-  .unit-xs-1-3,
-  .xs-1-3,
-  .unit-xs-2-3,
-  .xs-2-3,
-  .unit-xs-1-4,
-  .xs-1-4,
-  .unit-xs-3-4,
-  .xs-3-4 {
-    display: inline-block;
-    visibility: visible;
-  }
-
 }
 
-@media only screen and (min-width: 30.063em) {
-
-  .unit-s-hidden {
-    display: none;
-    visibility: hidden;
-  }
-
-  .unit-s-centered {
-    margin: 0 auto;
-  }
-
-  .unit-s-1,
-  .s-1 {
-    display: block;
-    visibility: visible;
-    width: 100%;
-  }
-
-  .unit-offset-s-0 {
-    margin-left: 0;
-  }
-
-  .unit-push-s-0,
-  .unit-pull-s-0 {
-    left: 0;
-  }
-
-  .unit-s-1-2,
-  .s-1-2 {
-    width: 50.0000%;
-  }
-
-  .unit-offset-s-1-2 {
-    margin-left: 50.0000%;
-  }
-
-  .unit-push-s-1-2 {
-    left: 50.0000%;
-  }
-
-  .unit-pull-s-1-2 {
-    left: -50.0000%;
-  }
-
-  .unit-s-1-3,
-  .s-1-3 {
-    width: 33.3333%;
-  }
-
-  .unit-offset-s-1-3 {
-    margin-left: 33.3333%;
-  }
-
-  .unit-push-s-1-3 {
-    left: 33.3333%;
-  }
-
-  .unit-pull-s-1-3 {
-    left: -33.3333%;
-  }
-
-  .unit-s-2-3,
-  .s-2-3 {
-    width: 66.6667%;
-  }
-
-  .unit-offset-s-2-3 {
-    margin-left: 66.6667%;
-  }
-
-  .unit-push-s-2-3 {
-    left: 66.6667%;
-  }
-
-  .unit-pull-s-2-3 {
-    left: -66.6667%;
-  }
-
-  .unit-s-1-4,
-  .s-1-4 {
-    width: 25.0000%;
-  }
-
-  .unit-offset-s-1-4 {
-    margin-left: 25.0000%;
-  }
-
-  .unit-push-s-1-4 {
-    left: 25.0000%;
-  }
-
-  .unit-pull-s-1-4 {
-    left: -25.0000%;
-  }
-
-  .unit-s-3-4,
-  .s-3-4 {
-    width: 75.0000%;
-  }
-
-  .unit-offset-s-3-4 {
-    margin-left: 75.0000%;
-  }
-
-  .unit-push-s-3-4 {
-    left: 75.0000%;
-  }
-
-  .unit-pull-s-3-4 {
-    left: -75.0000%;
-  }
-
-  .unit-s-1-2,
-  .s-1-2,
-  .unit-s-1-3,
-  .s-1-3,
-  .unit-s-2-3,
-  .s-2-3,
-  .unit-s-1-4,
-  .s-1-4,
-  .unit-s-3-4,
-  .s-3-4 {
-    display: inline-block;
-    visibility: visible;
-  }
-
+.unit-s-1-2 {
+    width: 50%;
 }
 
-@media only screen and (min-width: 40.063em) {
-
-  .unit-m-hidden {
-    display: none;
-    visibility: hidden;
-  }
-
-  .unit-m-centered {
-    margin: 0 auto;
-  }
-
-  .unit-m-1,
-  .m-1 {
-    display: block;
-    visibility: visible;
-    width: 100%;
-  }
-
-  .unit-offset-m-0 {
-    margin-left: 0;
-  }
-
-  .unit-push-m-0,
-  .unit-pull-m-0 {
-    left: 0;
-  }
-
-  .unit-m-1-2,
-  .m-1-2 {
-    width: 50.0000%;
-  }
-
-  .unit-offset-m-1-2 {
-    margin-left: 50.0000%;
-  }
-
-  .unit-push-m-1-2 {
-    left: 50.0000%;
-  }
-
-  .unit-pull-m-1-2 {
-    left: -50.0000%;
-  }
-
-  .unit-m-1-3,
-  .m-1-3 {
-    width: 33.3333%;
-  }
-
-  .unit-offset-m-1-3 {
-    margin-left: 33.3333%;
-  }
-
-  .unit-push-m-1-3 {
-    left: 33.3333%;
-  }
-
-  .unit-pull-m-1-3 {
-    left: -33.3333%;
-  }
-
-  .unit-m-2-3,
-  .m-2-3 {
-    width: 66.6667%;
-  }
-
-  .unit-offset-m-2-3 {
-    margin-left: 66.6667%;
-  }
-
-  .unit-push-m-2-3 {
-    left: 66.6667%;
-  }
-
-  .unit-pull-m-2-3 {
-    left: -66.6667%;
-  }
-
-  .unit-m-1-4,
-  .m-1-4 {
-    width: 25.0000%;
-  }
-
-  .unit-offset-m-1-4 {
-    margin-left: 25.0000%;
-  }
-
-  .unit-push-m-1-4 {
-    left: 25.0000%;
-  }
-
-  .unit-pull-m-1-4 {
-    left: -25.0000%;
-  }
-
-  .unit-m-3-4,
-  .m-3-4 {
-    width: 75.0000%;
-  }
-
-  .unit-offset-m-3-4 {
-    margin-left: 75.0000%;
-  }
-
-  .unit-push-m-3-4 {
-    left: 75.0000%;
-  }
-
-  .unit-pull-m-3-4 {
-    left: -75.0000%;
-  }
-
-  .unit-m-1-2,
-  .m-1-2,
-  .unit-m-1-3,
-  .m-1-3,
-  .unit-m-2-3,
-  .m-2-3,
-  .unit-m-1-4,
-  .m-1-4,
-  .unit-m-3-4,
-  .m-3-4 {
-    display: inline-block;
-    visibility: visible;
-  }
-
+.unit-s-1-3 {
+    width: 33.3333%
 }
 
-@media only screen and (min-width: 60.063em) {
+.unit-s-2-3 {
+    width: 66.6666%
+}
 
-  .unit-l-hidden {
-    display: none;
-    visibility: hidden;
-  }
+.unit-s-1-4 {
+    width: 25%;
+}
 
-  .unit-l-centered {
-    margin: 0 auto;
-  }
+.unit-s-3-4 {
+    width: 75%;
+}
 
-  .unit-l-1,
-  .l-1 {
-    display: block;
-    visibility: visible;
-    width: 100%;
-  }
-
-  .unit-offset-l-0 {
-    margin-left: 0;
-  }
-
-  .unit-push-l-0,
-  .unit-pull-l-0 {
-    left: 0;
-  }
-
-  .unit-l-1-2,
-  .l-1-2 {
-    width: 50.0000%;
-  }
-
-  .unit-offset-l-1-2 {
-    margin-left: 50.0000%;
-  }
-
-  .unit-push-l-1-2 {
-    left: 50.0000%;
-  }
-
-  .unit-pull-l-1-2 {
-    left: -50.0000%;
-  }
-
-  .unit-l-1-3,
-  .l-1-3 {
-    width: 33.3333%;
-  }
-
-  .unit-offset-l-1-3 {
-    margin-left: 33.3333%;
-  }
-
-  .unit-push-l-1-3 {
-    left: 33.3333%;
-  }
-
-  .unit-pull-l-1-3 {
-    left: -33.3333%;
-  }
-
-  .unit-l-2-3,
-  .l-2-3 {
-    width: 66.6667%;
-  }
-
-  .unit-offset-l-2-3 {
-    margin-left: 66.6667%;
-  }
-
-  .unit-push-l-2-3 {
-    left: 66.6667%;
-  }
-
-  .unit-pull-l-2-3 {
-    left: -66.6667%;
-  }
-
-  .unit-l-1-4,
-  .l-1-4 {
-    width: 25.0000%;
-  }
-
-  .unit-offset-l-1-4 {
-    margin-left: 25.0000%;
-  }
-
-  .unit-push-l-1-4 {
-    left: 25.0000%;
-  }
-
-  .unit-pull-l-1-4 {
-    left: -25.0000%;
-  }
-
-  .unit-l-3-4,
-  .l-3-4 {
-    width: 75.0000%;
-  }
-
-  .unit-offset-l-3-4 {
-    margin-left: 75.0000%;
-  }
-
-  .unit-push-l-3-4 {
-    left: 75.0000%;
-  }
-
-  .unit-pull-l-3-4 {
-    left: -75.0000%;
-  }
+@media (min-width: 30.063em) {
+    .unit-m-hidden {
+        visibility: hidden;
+        display: none;
+    }
     
-  .unit-offset-l-1-6 {
-    margin-left: 16.6667%;
-  }
+    .unit-m-1 {
+        width: 100%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-m-1-2 {
+        width: 50%;
+        visibility: visible;
+        display: block;
+    }
 
-  .unit-l-1-2,
-  .l-1-2,
-  .unit-l-1-3,
-  .l-1-3,
-  .unit-l-2-3,
-  .l-2-3,
-  .unit-l-1-4,
-  .l-1-4,
-  .unit-l-3-4,
-  .l-3-4 {
-    display: inline-block;
-    visibility: visible;
-  }
-
+    .unit-m-1-3 {
+        width: 33.33333%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-m-2-3 {
+        width: 66.6666%;   
+    }
 }
 
-@media only screen and (min-width: 64.063em) {
-
-  .unit-xl-hidden {
-    display: none;
-    visibility: hidden;
-  }
-
-  .unit-xl-centered {
-    margin: 0 auto;
-  }
-
-  .unit-xl-1,
-  .xl-1 {
-    display: block;
-    visibility: visible;
-    width: 100%;
-  }
-
-  .unit-offset-xl-0 {
-    margin-left: 0;
-  }
-
-  .unit-push-xl-0,
-  .unit-pull-xl-0 {
-    left: 0;
-  }
-
-  .unit-xl-1-2,
-  .xl-1-2 {
-    width: 50.0000%;
-  }
-
-  .unit-offset-xl-1-2 {
-    margin-left: 50.0000%;
-  }
-
-  .unit-push-xl-1-2 {
-    left: 50.0000%;
-  }
-
-  .unit-pull-xl-1-2 {
-    left: -50.0000%;
-  }
-
-  .unit-xl-1-3,
-  .xl-1-3 {
-    width: 33.3333%;
-  }
-
-  .unit-offset-xl-1-3 {
-    margin-left: 33.3333%;
-  }
-
-  .unit-push-xl-1-3 {
-    left: 33.3333%;
-  }
-
-  .unit-pull-xl-1-3 {
-    left: -33.3333%;
-  }
-
-  .unit-xl-2-3,
-  .xl-2-3 {
-    width: 66.6667%;
-  }
-
-  .unit-offset-xl-2-3 {
-    margin-left: 66.6667%;
-  }
-
-  .unit-push-xl-2-3 {
-    left: 66.6667%;
-  }
-
-  .unit-pull-xl-2-3 {
-    left: -66.6667%;
-  }
-
-  .unit-xl-1-4,
-  .xl-1-4 {
-    width: 25.0000%;
-  }
-
-  .unit-offset-xl-1-4 {
-    margin-left: 25.0000%;
-  }
-
-  .unit-push-xl-1-4 {
-    left: 25.0000%;
-  }
-
-  .unit-pull-xl-1-4 {
-    left: -25.0000%;
-  }
-
-  .unit-xl-3-4,
-  .xl-3-4 {
-    width: 75.0000%;
-  }
-
-  .unit-offset-xl-3-4 {
-    margin-left: 75.0000%;
-  }
-
-  .unit-push-xl-3-4 {
-    left: 75.0000%;
-  }
-
-  .unit-pull-xl-3-4 {
-    left: -75.0000%;
-  }
-
-  .unit-xl-1-5,
-  .xl-1-5 {
-    width: 20.0000%;
-  }
-
-  .unit-offset-xl-1-5 {
-    margin-left: 20.0000%;
-  }
-
-  .unit-push-xl-1-5 {
-    left: 20.0000%;
-  }
-
-  .unit-pull-xl-1-5 {
-    left: -20.0000%;
-  }
-
-  .unit-xl-2-5,
-  .xl-2-5 {
-    width: 40.0000%;
-  }
-
-  .unit-offset-xl-2-5 {
-    margin-left: 40.0000%;
-  }
-
-  .unit-push-xl-2-5 {
-    left: 40.0000%;
-  }
-
-  .unit-pull-xl-2-5 {
-    left: -40.0000%;
-  }
-
-  .unit-xl-3-5,
-  .xl-3-5 {
-    width: 60.0000%;
-  }
-
-  .unit-offset-xl-3-5 {
-    margin-left: 60.0000%;
-  }
-
-  .unit-push-xl-3-5 {
-    left: 60.0000%;
-  }
-
-  .unit-pull-xl-3-5 {
-    left: -60.0000%;
-  }
-
-  .unit-xl-4-5,
-  .xl-4-5 {
-    width: 80.0000%;
-  }
-
-  .unit-offset-xl-4-5 {
-    margin-left: 80.0000%;
-  }
-
-  .unit-push-xl-4-5 {
-    left: 80.0000%;
-  }
-
-  .unit-pull-xl-4-5 {
-    left: -80.0000%;
-  }
-
-  .unit-xl-1-6,
-  .xl-1-6 {
-    width: 16.6667%;
-  }
-
-  .unit-offset-xl-1-6 {
-    margin-left: 16.6667%;
-  }
-
-  .unit-push-xl-1-6 {
-    left: 16.6667%;
-  }
-
-  .unit-pull-xl-1-6 {
-    left: -16.6667%;
-  }
-
-  .unit-xl-5-6,
-  .xl-5-6 {
-    width: 83.3333%;
-  }
-
-  .unit-offset-xl-5-6 {
-    margin-left: 83.3333%;
-  }
-
-  .unit-push-xl-5-6 {
-    left: 83.3333%;
-  }
-
-  .unit-pull-xl-5-6 {
-    left: -83.3333%;
-  }
-
-  .unit-xl-1-2,
-  .xl-1-2,
-  .unit-xl-1-3,
-  .xl-1-3,
-  .unit-xl-2-3,
-  .xl-2-3,
-  .unit-xl-1-4,
-  .xl-1-4,
-  .unit-xl-3-4,
-  .xl-3-4,
-  .unit-xl-1-5,
-  .xl-1-5,
-  .unit-xl-2-5,
-  .xl-2-5,
-  .unit-xl-3-5,
-  .xl-3-5,
-  .unit-xl-4-5,
-  .xl-4-5,
-  .unit-xl-1-6,
-  .xl-1-6,
-  .unit-xl-5-6,
-  .xl-5-6 {
-    display: inline-block;
-    visibility: visible;
-  }
-
+@media (min-width: 40.063em) {
+    .unit-l-hidden {
+        visibility: hidden;
+        display: none;
+    }
+    
+    .unit-l-1-2 {
+        width: 50%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-l-1-3 {
+        width: 33.3333%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-l-1-4 {
+        width: 25%;   
+    }
+    
+    .unit-l-2-3 {
+        width: 66.6666%;   
+    }
 }
 
-@media only screen and (min-width: 80.063em) {
-
-  .unit-xxl-hidden {
-    display: none;
-    visibility: hidden;
-  }
-
-  .unit-xxl-centered {
-    margin: 0 auto;
-  }
-
-  .unit-xxl-1,
-  .xxl-1 {
-    display: block;
-    visibility: visible;
-    width: 100%;
-  }
-
-  .unit-offset-xxl-0 {
-    margin-left: 0;
-  }
-
-  .unit-push-xxl-0,
-  .unit-pull-xxl-0 {
-    left: 0;
-  }
-
-  .unit-xxl-1-2,
-  .xxl-1-2 {
-    width: 50.0000%;
-  }
-
-  .unit-offset-xxl-1-2 {
-    margin-left: 50.0000%;
-  }
-
-  .unit-push-xxl-1-2 {
-    left: 50.0000%;
-  }
-
-  .unit-pull-xxl-1-2 {
-    left: -50.0000%;
-  }
-
-  .unit-xxl-1-3,
-  .xxl-1-3 {
-    width: 33.3333%;
-  }
-
-  .unit-offset-xxl-1-3 {
-    margin-left: 33.3333%;
-  }
-
-  .unit-push-xxl-1-3 {
-    left: 33.3333%;
-  }
-
-  .unit-pull-xxl-1-3 {
-    left: -33.3333%;
-  }
-
-  .unit-xxl-2-3,
-  .xxl-2-3 {
-    width: 66.6667%;
-  }
-
-  .unit-offset-xxl-2-3 {
-    margin-left: 66.6667%;
-  }
-
-  .unit-push-xxl-2-3 {
-    left: 66.6667%;
-  }
-
-  .unit-pull-xxl-2-3 {
-    left: -66.6667%;
-  }
-
-  .unit-xxl-1-4,
-  .xxl-1-4 {
-    width: 25.0000%;
-  }
-
-  .unit-offset-xxl-1-4 {
-    margin-left: 25.0000%;
-  }
-
-  .unit-push-xxl-1-4 {
-    left: 25.0000%;
-  }
-
-  .unit-pull-xxl-1-4 {
-    left: -25.0000%;
-  }
-
-  .unit-xxl-3-4,
-  .xxl-3-4 {
-    width: 75.0000%;
-  }
-
-  .unit-offset-xxl-3-4 {
-    margin-left: 75.0000%;
-  }
-
-  .unit-push-xxl-3-4 {
-    left: 75.0000%;
-  }
-
-  .unit-pull-xxl-3-4 {
-    left: -75.0000%;
-  }
-
-  .unit-xxl-1-5,
-  .xxl-1-5 {
-    width: 20.0000%;
-  }
-
-  .unit-offset-xxl-1-5 {
-    margin-left: 20.0000%;
-  }
-
-  .unit-push-xxl-1-5 {
-    left: 20.0000%;
-  }
-
-  .unit-pull-xxl-1-5 {
-    left: -20.0000%;
-  }
-
-  .unit-xxl-2-5,
-  .xxl-2-5 {
-    width: 40.0000%;
-  }
-
-  .unit-offset-xxl-2-5 {
-    margin-left: 40.0000%;
-  }
-
-  .unit-push-xxl-2-5 {
-    left: 40.0000%;
-  }
-
-  .unit-pull-xxl-2-5 {
-    left: -40.0000%;
-  }
-
-  .unit-xxl-3-5,
-  .xxl-3-5 {
-    width: 60.0000%;
-  }
-
-  .unit-offset-xxl-3-5 {
-    margin-left: 60.0000%;
-  }
-
-  .unit-push-xxl-3-5 {
-    left: 60.0000%;
-  }
-
-  .unit-pull-xxl-3-5 {
-    left: -60.0000%;
-  }
-
-  .unit-xxl-4-5,
-  .xxl-4-5 {
-    width: 80.0000%;
-  }
-
-  .unit-offset-xxl-4-5 {
-    margin-left: 80.0000%;
-  }
-
-  .unit-push-xxl-4-5 {
-    left: 80.0000%;
-  }
-
-  .unit-pull-xxl-4-5 {
-    left: -80.0000%;
-  }
-
-  .unit-xxl-1-6,
-  .xxl-1-6 {
-    width: 16.6667%;
-  }
-
-  .unit-offset-xxl-1-6 {
-    margin-left: 16.6667%;
-  }
-
-  .unit-push-xxl-1-6 {
-    left: 16.6667%;
-  }
-
-  .unit-pull-xxl-1-6 {
-    left: -16.6667%;
-  }
-
-  .unit-xxl-5-6,
-  .xxl-5-6 {
-    width: 83.3333%;
-  }
-
-  .unit-offset-xxl-5-6 {
-    margin-left: 83.3333%;
-  }
-
-  .unit-push-xxl-5-6 {
-    left: 83.3333%;
-  }
-
-  .unit-pull-xxl-5-6 {
-    left: -83.3333%;
-  }
-
-  .unit-xxl-1-2,
-  .xxl-1-2,
-  .unit-xxl-1-3,
-  .xxl-1-3,
-  .unit-xxl-2-3,
-  .xxl-2-3,
-  .unit-xxl-1-4,
-  .xxl-1-4,
-  .unit-xxl-3-4,
-  .xxl-3-4,
-  .unit-xxl-1-5,
-  .xxl-1-5,
-  .unit-xxl-2-5,
-  .xxl-2-5,
-  .unit-xxl-3-5,
-  .xxl-3-5,
-  .unit-xxl-4-5,
-  .xxl-4-5,
-  .unit-xxl-1-6,
-  .xxl-1-6,
-  .unit-xxl-5-6,
-  .xxl-5-6 {
-    display: inline-block;
-    visibility: visible;
-  }
-
-}
-
-.unit-content-distribute {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -ms-flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-}
-
-.content-fill {
-  -ms-flex-grow: 2;
-  -webkit-flex-grow: 2;
-  flex-grow: 2;
-  max-width: 100%; /* @bugfix: IE 10, 11 */
-}
-
-.content-shrink {
-  -ms-align-self: center;
-  -webkit-align-self: center;
-  align-self: center;
+@media (min-width: 64.063em) {
+    .unit-xl-hidden {
+        visibility: hidden;
+        display: none;
+    }
+    
+    .unit-xl-3-4 {
+        width: 75%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-xl-1-2 {
+        width: 50%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-xl-1-3 {
+        width: 33.333333%   
+    }
+    
+   .unit-xl-1-4 {
+        width: 25%;
+        visibility: visible;
+        display: block;
+    }
+    
+    .unit-xl-1-5 {
+        width: 20%;
+        visibility: visible;
+        display: block;
+    }
+    
 }
