--- a/css/typography.css
+++ b/css/typography.css
@@ -68,7 +68,6 @@ h1, h3, h4,
 
 #h2 {
     color: #025E63;
-    margin-left: 0.75rem;
     margin-right: 0.75rem;
     margin-bottom: 0.355rem;
 }
@@ -197,6 +196,14 @@ h6, .kilo {
 
 .pad-bottom-half {
   padding-bottom: 0.7500rem;
+}
+
+.pad-top-quarter {
+    padding-top: 0.035em;
+}
+
+.pad-bottom-quarter {
+    padding-top: 0.035em;
 }
 
 .align-center {
