--- a/_includes/identity.html
+++ b/_includes/identity.html
@@ -1,7 +1,7 @@
 <div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../identity/pedal-power/">
-            <img src="{{site.baseurl}}/images/illustration/the-tennis-serve-cover.jpg" alt="The tennis serve">
+            <img src="{{site.baseurl}}/images/identity/pedal-power-cover.gif" alt="The tennis serve">
             <figcaption>
                 <h5>Pedal Power</h5>
             </figcaption>
