--- a/_includes/identity.html
+++ b/_includes/identity.html
@@ -1,7 +1,7 @@
 <div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
         <a href="{{site.baseurl}}../identity/pedal-power/">
-            <img src="{{site.baseurl}}/images/identity/pedal-power-cover.gif" alt="The tennis serve">
+            <img src="{{site.baseurl}}/images/identity/pedal-power-cover.gif" alt="Pedal Power">
             <figcaption>
                 <h5>Pedal Power</h5>
             </figcaption>
@@ -9,10 +9,10 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-        <a href="{{site.baseurl}}../illustration/ottawa-senators-campaign/">
-            <img src="{{site.baseurl}}/images/illustration/senator-campaign-cover.jpg" alt="Senator Campaign">
+        <a href="{{site.baseurl}}../identity/personality-genie/">
+            <img src="{{site.baseurl}}/images/identity/personality-genie-cover.gif" alt="Personality Genie">
             <figcaption>
-                <h5>Senator Campaign</h5>
+                <h5>Personality Genie</h5>
             </figcaption>
         </a>
     </figure>
