feat(all): add distinctive audio logo project

--- a/_includes/identity.html
+++ b/_includes/identity.html
@@ -18,10 +18,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-xl-1-4">
-        <a href="{{site.baseurl}}../illustration/company-poster/">
-            <img src="{{site.baseurl}}/images/illustration/company-poster-cover.jpg" alt="Company Poster">
+        <a href="{{site.baseurl}}../identity/distinctive-audio/">
+            <img src="{{site.baseurl}}/images/identity/distinctive-audio-cover.gif" alt="Distinctive Audio">
             <figcaption>
-                <h5>Company Poster</h5>
+                <h5>Distinctive Audio</h5>
             </figcaption>
         </a>
     </figure>
