style(all): make general one colour banner for all pages

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="blog-banner">
+<section class="general-banner">
     <figure class="banner">
         <figcaption id="tab"><h2>Blog</h2></figcaption>
     </figure>
