--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     flex: 1;
@@ -498,7 +499,7 @@ section figure:hover figcaption {
 
 .banner-carousel {
     width: 100%;
-    height: 15em;
+    height: 12em;
     background-position: center;
     background-size: cover;
     background-repeat:no-repeat;
@@ -510,10 +511,11 @@ section figure:hover figcaption {
 
 .banner {
     width: 100%;
-    height: 15em;
+    height: 10em;
     background-position: center;
     background-size: cover;
     background-repeat:no-repeat;
+    background-color: #d9e4ea;
 }
 
 .typo {
@@ -530,79 +532,6 @@ section figure:hover figcaption {
 
 .motion {
     background-image:url("../images/motion-design/building-a-portfolio-banner.jpg");
-}
-
-.blog-banner {
-    background-color: #d9e4ea;
-    margin-bottom: 1.5em;
-}
-
-.bridgehead {
-    background-color: #d9e4ea;
-}
-
-.cirque {
-    background-color: #d9e4ea;
-}
-
-.go-with-the-flow {
-    background-color: #d9e4ea;
-}
-
-.collage {
-    background-color: #d9e4ea;
-}
-
-.obsessed-with-speed {
-    background-color: #d9e4ea;
-}
-
-.the-tennis-serve {
-    background-color: #d9e4ea;
-}
-
-.senator-campaign {
-    background-color: #d9e4ea;
-}
-
-.company-poster {
-    background-color: #d9e4ea;
-}
-
-.blues-brothers {
-    background-color: #d9e4ea;
-}
-
-.ascent-app {
-    background-color: #d9e4ea;
-}
-
-.good-to-talk-app {
-    background-color: #d9e4ea;
-}
-
-.palisar {
-    background-color: #d9e4ea;
-}
-
-.galactic-adventures {
-    background-color: #d9e4ea;
-}
-
-.demo-reel {
-    background-color: #d9e4ea;
-}
-
-.blue-hen-farm {
-    background-color: #d9e4ea;
-}
-
-.building-a-portfolio {
-    background-color: #d9e4ea;
-}
-
-.tennis-infographic {
-    background-color: #d9e4ea;
 }
 
 #tab {
@@ -711,14 +640,31 @@ footer > div {
   MEDIA QUERIES
 --------------------------- */
 
+@media only screen and (min-width: 20em) {
+
+    .banner-carousel {
+        height: 12em;  
+    }
+    
+    .banner {
+        height: 10em;   
+    }
+
+}
+
+
 @media (min-width: 30.063em) {
+    
+    .banner-carousel {
+        height: 13em;  
+    }
+    
+    .banner {
+        height: 11em;   
+    }
     
     .main-logo {
         margin: 0.25em auto;   
-    }
-    
-    .banner-carousel {
-        height: 16em;
     }
     
     .profile-pic {
@@ -789,7 +735,11 @@ footer > div {
     }
     
     .banner-carousel {
-        height: 17em;
+        height: 14em;  
+    }
+    
+    .banner {
+        height: 12em;   
     }
     
     #portfolio-intro {
@@ -899,6 +849,27 @@ footer > div {
     }
 }
 
+@media only screen and (min-width: 60.063em) {
+
+
+
+
+}
+
+@media only screen and (min-width: 64.063em) {
+    
+    .banner-carousel {
+        height: 14.5em;  
+    }
+    
+    .banner {
+        height: 12.5em;   
+    }
+
+
+}
+
+
 
 @media (min-width: 80.063em) {
     
@@ -907,7 +878,11 @@ footer > div {
     }
     
     .banner-carousel {
-        height: 20em;
+        height: 15.5em;  
+    }
+    
+    .banner {
+        height: 13.5em;   
     }
     
     #portfolio-intro {
